--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -194,6 +194,21 @@ ul {
 
 			article {
 				margin-bottom: 8px;
+
+				h2 {
+					margin-top: 16px;
+					margin-left: 16px;
+				}
+
+				.info {
+					margin-top: 16px;
+					margin-left: 16px;
+				}
+
+				.button {
+					margin-top: 16px;
+					margin-left: 16px;
+				}
 			}
 
 			.title {
